--- a/css/style.css
+++ b/css/style.css
@@ -747,6 +747,18 @@
 	.section_6 h2{
 		color: #ffffff;
 		font-family: 'CenturyGothicBold';
+		border-bottom: 1px solid #555555;
+	}
+
+	.section_6 h2:before {
+   		content: "";
+    	position: absolute;
+    	width: 77px;
+    	height: 5px;
+    	top: 92px;
+    	left: 50%;
+    	transform: translate(-50%,-50%);
+    	background-color: #555555;
 	}
 
 	.section_6 img{
@@ -759,6 +771,103 @@
  		height: 550px;
 	}
 
+/*footer	*/
+	
+	footer{
+		background: #060504;
+		font-family: 'CenturyGothic';
+	}
+
+
+	.in_footer_1>a{
+		color: #fcc721;
+		font-size: 16px;
+		padding: 20px 0 20px 50px;
+		position: relative;
+	}
+
+	.in_footer_1>a:before{
+		content: "";
+    	position: absolute;
+    	width: 40px;
+    	height: 40px;
+    	border-radius: 50%;
+    	background: #fcc721;
+    	top: 50%;
+    	left: 0;
+    	transform: translate(0, -50%)
+	}
+
+	.in_footer_1>a:after{
+		content: "";
+	    position: absolute;
+	    display: block;
+	    width: 16px;
+	    height: 16px;
+	    top: 50%;
+	    left: 12px;
+	    transform: translate(0, -50%);
+	    background: url(../image/css_sprites.png) -20px -150px;
+	}
+
+	.in_footer_1>p:nth-child(2){
+		color: #ffffff;
+		font-size: 16px;
+		padding-top: 50px;
+	}
+
+	.in_footer_1>p:last-child{
+		color: #fbc620;
+		font-size: 20px;
+	}
+
+	.in_footer_2>a{
+		color: #ffffff;
+		font-size: 16px;
+		padding-left: 50px;
+		position: relative;
+	}
+
+	.in_footer_2>a:before{
+		content: "";
+    	position: absolute;
+    	width: 40px;
+    	height: 40px;
+    	border-radius: 50%;
+    	background: #fcc721;
+    	top: 50%;
+    	left: 0;
+    	transform: translate(0, -50%)
+	}
+
+	.in_footer_2>a:after{
+		content: "";
+	    position: absolute;
+	    display: block;
+	    width: 16px;
+	    height: 16px;
+	    top: 50%;
+	    left: 12px;
+	    transform: translate(0, -50%);
+	    background: url(../image/css_sprites.png) -76px -96px;
+	}
+
+	.in_footer_2>p{
+		font-size: 24px;
+		color: #ffffff;
+	}
+
+	.in_footer_2>p:nth-child(2){
+		padding-top: 20px;
+	}
+
+	.in_footer_2>p>span{
+		text-transform: uppercase;
+		font-size: 34px;
+		font-family: 'CenturyGothicBold';
+		color: #fcc721;
+		line-height: 40px;
+	}
 
 
 	@media screen and (max-width:1200px) {
@@ -791,6 +900,10 @@
 		.owl-prev:before, .owl-next:before{
 			display: none;
 		}
+
+		.in_footer_1>p:nth-child(2){
+			padding-top: 0;
+		}
 	}
 
 	@media screen and (max-width:992px){
@@ -804,6 +917,12 @@
 		}
 		section:nth-child(4)>div>div>div{
 			padding: 0;
+		}
+	}
+
+	@media screen and (max-width:400px){
+		.logo{
+			width: 100%;
 		}
 	}
 
